# octor-compressor

./: README.md  package.json
.github/workflows/: release.yml
frontend/: app.js  index.html  style.css
scripts/: package.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs
src-tauri/tests/: compression_test.rs
