[package]
name = "octoshrink"
version = "2.1.5"
description = "OctoShrink"
authors = ["Octor Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "octoshrink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "rayon"] }
base64 = "0.22"
tempfile = "3"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "fs", "io-util"] }
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
